# FindMeMyJob

./: .env.example  .gitignore  CHANGES.md  Dockerfile  Procfile  README.md  ats_smoke.py  dashboard_smoke.py  discovery_smoke.py  experience_smoke.py  ext_jobs_smoke.py  interview_smoke.py  local_smoke.py  paste_smoke.py  pyproject.toml  railway.json  resume_edit_smoke.py  resume_format_smoke.py  resume_options_smoke.py  salary_smoke.py  serpapi_smoke.py  skills_smoke.py  smoke_test.py  start.sh
data/: apple_session.json
data/apple_debug/: api-20260605T161009.json  page-20260605T160854.html  page-20260605T161009.html  page-20260605T163014.html  page-20260605T165519.html  page-20260605T165527.html  page-20260605T165534.html  page-20260605T165541.html  page-20260605T165548.html  page-20260605T165725.html  page-20260605T165732.html  page-20260605T165740.html  page-20260605T165941.html  page-20260605T165955.html  page-20260605T223621.html  page-20260605T223628.html  page-20260605T223635.html  page-20260605T223642.html  page-20260605T223650.html  page-20260605T225108.html  page-20260605T225115.html  page-20260605T225122.html  page-20260605T225132.html  page-20260605T225821.html  page-20260605T225832.html  page-20260605T225839.html  page-20260605T225847.html  page-20260605T225854.html  page-20260605T230626.html  page-20260605T230636.html  page-20260605T230643.html  page-20260605T230650.html  page-20260605T230658.html
extension/: README.md  background.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
extension/content/: engine.js  upload.js
extension/icons/: README.md
extension/lib/: api.js
scripts/: fix_pg_sequences.py  normalize_resume_content.py  reformat_resumes.py  seed_from_sqlite.py
(+70 files in other folders)
