[project]
name = "findmemyjob"
version = "0.1.0"
description = "Personal job-search and auto-apply tool — Apple internal careers anchor, matching engine, ATS-keyword resume tailoring."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "playwright>=1.49",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/findmemyjob"]

[[tool.uv.index]]
url = "https://pypi.apple.com/simple"
default = true
