[project]
name = "findmemyjob"
version = "0.2.0"
description = "Personal job-search and auto-apply tool — multi-source (Apple internal, Greenhouse, Lever, RemoteOK, HN), LLM-powered matching and resume tailoring."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "playwright>=1.49",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "openai>=1.0",
    "google-genai>=1.40",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/findmemyjob"]
